--- a/view/styles/custom.css
+++ b/view/styles/custom.css
@@ -1,8 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
-body {
-  background-color: #2b2d42;
-  color: #ef233c;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
+html {
+  height: 100%;
 }
+
+body {
+  background-image: url("/view/images/darkLol.png");
+  background-size: 100%;
+  background-attachment: fixed;
+  color: #ef233c;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  transition: all 0.5s;
+  height: 100%;
+}
+
 .sideNav {
   height: 100%;
   width: 60px;
@@ -13,18 +24,21 @@ body {
   left: 0;
   overflow-x: hidden;
   padding-top: 20px;
-  box-shadow: 2px 1px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 1px 5px 0px rgba(0, 0, 0, 0.75);
 }
-.sideNav img{
+
+.sideNav img {
   width: 50px;
   display: block;
 }
-.ProfileIcone{
+
+.ProfileIcone {
   display: block;
   width: 10%;
   position: absolute;
   bottom: 20px;
 }
+
 .sideNav a {
   padding: 6px 6px 6px 6px;
   text-decoration: none;
@@ -33,39 +47,311 @@ body {
   display: block;
   text-align: center;
 }
+
+.Title {
+  height: 300px;
+  width: 100%;
+  top: 0px;
+  background-color: #2b2d42;
+  position: absolute;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.Title img {
+  width: 10%;
+}
+
 .main {
   text-align: center;
   margin-left: 50px;
-
-}
-.main h1{
-    font-family: Poppins;
-    font-size: 35px;
-}
-.main p{
-    font-family: Poppins;
-    font-size: 25px;
-}
-.Welcome{
-  padding-left: 10px;  
-  box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
-
-}
-.Welcome img{
-    width: 10%;
-    
+  height: 100%;
 }
 
-.siteStatus{
-    background-image: url("/view/images/darkLol.png");
-    background-size: 100%;
-    background-attachment: fixed;
-    line-height: 400px;
-    height: 400px;
-    width: 100%;
-    margin-top: 0px;
+.main h1 {
+  font-family: Poppins;
+  font-size: 35px;
+  text-align: center;
 }
-.siteStatus h1{
-    font-size: 100px;
-    font-style:italic;
+
+.main h2 {
+  font-family: Poppins;
+  text-align: center;
+}
+
+.main p {
+  font-family: Poppins;
+  font-size: 25px;
+}
+
+.Welcome {
+  padding-top: 80px;
+  background-color: #2b2d42;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  width: 100%;
+  padding-right: 100px;
+  padding-top: 100px;
+}
+
+.Welcome img {
+  width: 10%;
+}
+
+.siteStatus {
+  background-size: 100%;
+  background-attachment: fixed;
+  line-height: 400px;
+  height: 400px;
+  width: 100%;
+  margin-top: -65px;
+}
+
+.siteStatus h1 {
+  font-size: 100px;
+}
+
+/*TEAMS =============================================================*/
+.teamList {
+  overflow-y: scroll;
+  position: fixed;
+  top: 300px;
+  height: 600px;
+  width: 100%;
+  text-align: center;
+}
+.teamList .team {
+  background-color: #2b2d42ce;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  height: 100px;
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 20px;
+  transition: all 0.5s;
+}
+.teamList .teamImage {
+  display: inline-block;
+  height: 100%;
+  float: left;
+}
+.teamList .teamImage img {
+  height: 90%;
+  margin-left: 2px;
+  margin-top: 5%;
+}
+.teamList .teamInfos {
+  display: inline-block;
+  padding-left: 20px;
+}
+.teamList .teamTitle {
+  position: relative;
+  line-height: 80%;
+  text-align: left;
+}
+.teamList .teamGame {
+  position: relative;
+  text-align: left;
+  height: 100%;
+}
+.teamList .teamContract {
+  display: inline-block;
+  height: 90%;
+  right: 0px;
+  float: right;
+}
+.teamList .teamContract img {
+  height: 100%;
+  margin-top: 5px;
+}
+.teamList a {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 508px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin: auto;
+}
+.teamList a:hover {
+  background-color: #ef233c;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 508px;
+  color: white;
+}
+
+/*LOGIN=========================================================*/
+.loginForm {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+}
+.loginForm form {
+  padding: 30px;
+  margin: auto;
+  margin-top: auto;
+  background-color: #2b2d42ce;
+  display: flex;
+  flex-direction: column;
+}
+.loginForm input[type=text] {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin-bottom: 5px;
+}
+.loginForm input[type=password] {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin-bottom: 5px;
+}
+.loginForm input[type=submit] {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 308px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin: auto;
+}
+.loginForm input[type=submit]:hover {
+  background-color: #ef233c;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 308px;
+  color: white;
+}
+.loginForm input[type=text]:focus {
+  background-color: #ef233c;
+  border: none;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
+  color: white;
+}
+.loginForm input[type=password]:focus {
+  background-color: #ef233c;
+  border: none;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
+  color: white;
+}
+.loginForm ::placeholder {
+  color: white;
+}
+
+/*Create ======================================*/
+.createForm {
+  position: fixed;
+  top: 300px;
+  height: 600px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #2b2d42ce;
+}
+.createForm input[type=text] {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 500px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin: auto;
+}
+.createForm input[type=text]:focus {
+  background-color: #ef233c;
+  border: none;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 600px;
+  color: white;
+}
+.createForm textarea {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 500px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin: auto;
+}
+.createForm textarea:focus {
+  background-color: #ef233c;
+  border: none;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 300px;
+  width: 600px;
+  color: white;
+}
+.createForm select {
+  margin: auto;
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 500px;
+  color: white;
+  transition: all 0.5s;
+  margin: auto;
+}
+.createForm select:focus {
+  background-color: #ef233c;
+  border: none;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 600px;
+  color: white;
+}
+.createForm input[type=submit] {
+  background-color: transparent;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 508px;
+  color: #ef233c;
+  transition: all 0.5s;
+  margin: auto;
+}
+.createForm input[type=submit]:hover {
+  background-color: #ef233c;
+  border: solid;
+  border-color: #ef233c;
+  border-radius: 3px;
+  height: 30px;
+  width: 508px;
+  color: white;
+}
+.createForm ::placeholder {
+  color: white;
 }
